--- a/style.css
+++ b/style.css
@@ -2,39 +2,24 @@ html,
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(0, 0, 0);
 }
 
 .main-header {
-    background-color: rgb(255, 255, 0);
+    background-color: rgba(0, 0, 0, .3);
     padding-bottom: 10px;
-}
-
-h3 {
-    color: white;
-    font-size: 20px;
-    font-family: "Georama";
-    text-align: center;
 }
 
 .title {
     text-align: center;
     margin: 0;
     font-size: 8em;
-    font-family: "Fugaz One";
+    font-family: "Helvetica";
     font-weight: normal;
-    color: rgb(0, 0, 0);
-}
-
-.title:hover {
     color: white;
-    -webkit-text-stroke: 5px black;
-    cursor: url("pizzacursor.png"), pointer;
 }
 
 #card-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     margin: 20px;
 }
@@ -45,75 +30,41 @@ h3 {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 5px;
-    background-color: white;
-}
-
-.card:hover {
-    border: 20px solid;
-    border-color: red;
 }
 
 .card-content {
     padding: 20px;
-    color: #000000;
-    font-family: "Georama";
-    font-weight: 300;
+    font-family: "Verdana";
+    color: #777;
 }
 
 .card-content h2 {
     margin-top: 0;
-    font-size: 30px;
-    text-align: center;
+    font-size: 20px;
 }
 
-p {
-    float: left;
-}
-
-.right {
-    float: right;
-    margin-top: 10px;
-}
-
-.photo {
+.card img {
     width: 100%;
     height: auto;
 }
 
 .footer {
-    position: fixed;
     display: flex;
     justify-content: center;
-    background-color: rgb(255, 255, 0);
+    background-color: rgba(0, 0, 0, .3);
     padding: 10px;
-    height: 60px;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
-
-.footer:hover {
-    height: 80px;
 }
 
 button {
     text-align: center;
-    background-color: #000000;
+    background-color: #666;
     border: none;
-    padding: 8px 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     height: 40px;
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
-    font-family: "Georama";
-    font-size: 20px;
-    font-weight: 500;
+    font-size: 22px;
     cursor: pointer;
-    margin: 5px 5px 5px 5px;
-}
-
-button:hover {
-    background-color: white;
-    padding-bottom: 30px;
-    color: black;
-    border: 5px solid black;
+    margin: 5px;
 }
