--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ h3 {
     font-size: 20px;
     font-family: "Georama";
     text-align: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .title {
@@ -32,6 +34,31 @@ h3 {
     cursor: url("pizzacursor.png"), pointer;
 }
 
+h4 {
+    padding-right: 20px;
+}
+
+.filters {
+    display: flex;
+    justify-content: center;
+    padding: 8px 20px;
+    height: 40px;
+    width: 100%;
+    color: white;
+    font-family: "Georama";
+    text-align: center;
+    border: none;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 5px 5px 5px 5px;
+}
+
+.filters button {
+    padding-bottom: 32px;
+    border: 3px solid white;
+}
+
 #card-container {
     display: flex;
     flex-wrap: wrap;
@@ -42,15 +69,14 @@ h3 {
 .card {
     width: 300px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 5px;
     background-color: white;
 }
 
 .card:hover {
-    border: 20px solid;
-    border-color: red;
+    border: 20px solid red;
 }
 
 .card-content {
