--- a/style.css
+++ b/style.css
@@ -10,6 +10,21 @@ body {
     padding-bottom: 10px;
 }
 
+.title {
+    text-align: center;
+    margin: 0;
+    font-size: 8em;
+    font-family: "Fugaz One";
+    font-weight: normal;
+    color: white;
+    -webkit-text-stroke: 5px black;
+}
+
+.title:hover {
+    font-size: 9em;
+    cursor: url("pizzacursor.png"), pointer;
+}
+
 h3 {
     color: white;
     font-size: 20px;
@@ -19,23 +34,14 @@ h3 {
     margin-bottom: 0;
 }
 
-.title {
-    text-align: center;
-    margin: 0;
-    font-size: 8em;
-    font-family: "Fugaz One";
-    font-weight: normal;
-    color: rgb(0, 0, 0);
-}
-
-.title:hover {
-    color: white;
-    -webkit-text-stroke: 5px black;
-    cursor: url("pizzacursor.png"), pointer;
-}
-
-h4 {
+h3:hover {
     padding-right: 20px;
+    font-size: 24px;
+
+}
+
+h4:hover {
+    font-size: 3em;
 }
 
 .filters {
@@ -69,6 +75,7 @@ h4 {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin: 5px;
     background-color: white;
+    cursor: url("pizzacursor.png"), pointer;
 }
 
 .card:hover {
@@ -123,7 +130,28 @@ p {
     border: 3px solid black;
 }
 
-.btn {
+.help {
+    border-radius: 50%;
+    margin: 8px;
+    padding: 2px 10px 2px 10px;
+    text-align: center;
+    background-color: #000000;
+    width: auto;
+    height: auto;
+    color: white;
+    font-family: "Georama";
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.help:hover {
+    background-color: white;
+    color: black;
+    border: 5px solid black;
+}
+
+.btn{
     text-align: center;
     background-color: #000000;
     /* top right bottom left*/
@@ -138,9 +166,48 @@ p {
     margin: 5px;
 }
 
-.btn:hover {
+.btn:hover{
     background-color: white;
     padding-bottom: 30px;
     color: black;
     border: 5px solid black;
+}
+
+/* ***************** HELP PAGE ***************** */
+
+#helpPage {
+    color: white;
+    font-family: "Georama";
+    text-align: center;
+}
+
+.helpInfo {
+    font-size: 18px;
+}
+
+table {
+    margin: auto;
+    border-spacing: 50px;
+    width: 65%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+table td {
+    width: 50%;
+    border: 5px solid white;
+    border-radius: 15px;
+    padding: 10px 25px 10px 25px;
+}
+
+#helpPage button {
+    background-color: yellow;
+    color: black;
+    border: 5px solid black;
+    font-size: 18px;
+    height: 45px;
+}
+
+#helpPage .btn:hover {
+    background-color: white;
 }
